syntax = "proto3";

package sso;

option go_package = "protos/gen/go/crud";

service Message {
  rpc SentMessage (SentMessageRequest) returns (SentMessageResponse);
  rpc ShowMessages (ShowMessagesRequest) returns (ShowMessagesResponse);
  rpc GetMessage (GetMessageRequest) returns (GetMessageResponse);
  rpc UpdateMessage (UpdateMessageRequest) returns (UpdateMessageResponse);
  rpc DeleteMessage (DeleteMessageRequest) returns (DeleteMessageResponse);
}

message SentMessageRequest {
  string content = 2;
  string type = 3;
  string token = 4;
}

message SentMessageResponse {
  int64 mid = 1;
}

message GetMessageRequest {
  int64 mid = 2;
  string token = 3;
}

message GetMessageResponse {
  string message = 1;
}

message ShowMessagesRequest {
  string token = 2;
}

message ShowMessagesResponse {
  bool status = 1;
}

message UpdateMessageRequest {
  int64 mid = 2;
  string new_content = 3;
  string token = 4;
}

message UpdateMessageResponse {
  bool status = 1;
}

message DeleteMessageRequest {
  int64 mid = 2;
  string token = 3;
}

message DeleteMessageResponse {
  bool status = 1;
}